--- a/index.css
+++ b/index.css
@@ -3,11 +3,17 @@
     --jungle-color-orange: #fbb81d;
 }
 
+@font-face {
+    font-family: "roboto";
+    src: url("fonts/Roboto-Regular.ttf");
+}
+
 body,
 html {
     margin: 0;
     padding: 0;
     height: 100%;
+    font-family: 'roboto', 'ubuntu', 'Liberation Sans';
 }
 
 header {
